# videodown

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  app.go  go.mod  go.sum  index.html  main.go  package.json  pnpm-lock.yaml  vite.config.ts  wails.json
.github/workflows/: release.yml
bilibili/api/: batch_resolve.go  collection.go  core.go  download.go  err.go  favorites.go  follow.go  header.go  history.go  http.go  login.go  login_test.go  profile.go  seasons_series.go  user.go  video.go  wbi.go
bilibili/model/: collection.go  constant.go  favorites.go  follow.go  history.go  login.go  playurl.go  profile.go  response.go  seasons_series.go  user.go  video.go  video_detail.go  video_list.go  video_url.go
douyin/api/: auth.go  collection.go  core.go  download.go  favorites.go  follow.go  http.go  jingxuan.go  profile.go  user.go  video.go  webid.go
douyin/model/: collection.go  favorites.go  follow.go  profile.go  user.go  video.go
frontend/: index.html  package-lock.json  package.json  package.json.md5  tsconfig.app.json  vite.config.ts
frontend/src/: index.css  index.tsx  routeTree.gen.ts
frontend/src/components/: BiliBiliMenu.tsx  BiliBiliProfileCard.tsx  BiliBiliQRCode.tsx  DetailError.tsx  DetailLoading.tsx  DetailToolbar.tsx  EmptyState.tsx  ErrorToast.tsx  Header.tsx  NoCover.tsx  SidebarList.tsx  StatusToast.tsx  ThemeChange.tsx  Toast.tsx  UpCommonLayout.tsx  UpHeaderShell.tsx  UpPageShell.tsx  VideoCardGrid.tsx  VideoListSection.tsx
frontend/src/hooks/: useToast.ts
frontend/src/lib/: bilibiliAuth.ts  bilibiliDownloadQueue.ts  bilibiliPlayResolve.ts  bilibiliStore.ts  douyinDownloadQueue.ts  douyinMedia.ts  douyinStore.ts  format.ts  model.ts  semaphore.ts
header/: bilibili.go
logger/: badger.go  mode.go  req.go  wails.go
src/: App.tsx  index.css  index.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  lib.rs  main.rs  settings.rs
src-tauri/src/api/: bilibili.rs  client.rs  douyin.rs  utils.rs
src-tauri/src/api/bilibili/: cookie.rs  info.rs  myinfo.rs  nav.rs  qrcode.rs  series.rs  star.rs  video.rs
src-tauri/src/api/douyin/: other.rs  profile.rs  webid.rs
src/components/: BilibiliQrcode.tsx  Header.tsx  Video.tsx
src/pages/: About.tsx  Bilibili.tsx  Douyin.tsx  Home.tsx  MyInfo.tsx  Settings.tsx
utils/: assert.go  bilibili.go  ffmpeg.go  filename.go  filename_test.go  settings.go  settings_test.go  time.go  update.go  utils.go
(+89 files in other folders)
