[package]
name = "videodown"
version = "0.1.0"
description = "Bilibili And Douyin Video Downloader"
authors = ["kamiertop"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "videodown_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9.11"
reqwest = { version = "0.13.2", features = ["json", "query"] }
log = "0.4.29"
tokio = { version = "1.49.0", features = ["macros"] }
sled = "0.34.7"

[peofile.release]
panic = "abort"
strip = true
lto = true

[package.metadata.tauri.resources]
"resources/WebView2Loader.dll" = "WebView2Loader.dll"
